@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+    * Fixes
+        - Fix t/storage/replicated.t relying on no-longer-available module
+
 0.082842 2020-06-16 20:10 (UTC)
     * New Features
         - An on_connect rebase_sqlmaker call allowing experimentation with
